--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -71,6 +71,7 @@ main {
   background-color: $red;
   height: 200vh;
   .main__top {
+    z-index: 2;
     background-color: $red;
     opacity: 0.95;
     position: fixed;
@@ -102,7 +103,16 @@ main {
 }
 
 .main__content {
-  margin: 180px 70px 0px 70px;
+  background: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.1) 5%,
+      transparent,
+      transparent,
+      transparent,
+      transparent
+    )
+    $red;
+  padding: 80px 70px 80px 70px;
   color: white;
   .main__content-header {
     display: flex;
@@ -118,10 +128,14 @@ main {
       flex-wrap: wrap;
       justify-content: flex-end;
       align-content: flex-end;
+      div:last-child {
+        margin-left: 4px;
+      }
     }
   }
   .main__content-image {
     .image__entryNumber {
+      z-index: 1;
       position: relative;
       top: 60px;
       left: -10px;
@@ -134,7 +148,7 @@ main {
       display: flex;
       justify-content: center;
       align-items: center;
-      border: 1px solid $deepRed;
+      border: 0.5px solid $deepRed;
     }
     .image__entryNumber div:first-child {
       font-size: 12px;
@@ -143,6 +157,37 @@ main {
     img {
       width: 100%;
       height: 100%;
+      margin-bottom: 50px;
+      cursor: pointer;
+      box-shadow: 0 80px 80px -80px #000, 0 0 12px rgba(0, 0, 0, 0.06),
+        inset 0 0 0 1px rgba(0, 0, 0, 0.2);
     }
   }
+}
+
+.main__content-rating {
+  text-align: end;
+  font-size: 18px;
+  color: $deepRed;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+
+.main__content-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: $deepRed;
+  font-size: 18px;
+  font-weight: 500;
+}
+.main__content-bottom div:last-child {
+  padding: 10px;
+  cursor: pointer;
+  padding: 10px;
+  border-bottom: 2px solid $deepRed;
+}
+
+.main__content:nth-child(2) {
+  margin-top: 100px;
 }
