--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,180 @@
+@import "_variables.scss";
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
-  background: peru;
-  a {
-    color: blue;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 300vh;
+}
+
+header {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  nav {
+    background-color: white;
+    opacity: 0.95;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 100px;
+    ul {
+      display: flex;
+    }
+    ul > li:first-child {
+      margin-right: 20px;
+    }
+    a {
+      color: $black;
+      font-weight: 300;
+      font-size: 14px;
+      text-transform: uppercase;
+    }
+  }
+  .logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70px;
+    height: 70px;
+  }
+}
+
+.first {
+  margin-bottom: 100px;
+  position: relative;
+  img {
+    margin-top: 100px;
+    padding: 0px 100px;
+    width: 100%;
+    height: 100%;
+  }
+  .first__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    .first__text div:first-child {
+      font-weight: 300;
+      margin-bottom: 50px;
+    }
+    .first__text div:not(:first-child) {
+      font-size: 60px;
+      font-family: serif;
+    }
+    .first__text div:last-child {
+      margin-bottom: 100px;
+    }
+    .first__button {
+      a {
+        display: block;
+        color: white;
+        font-weight: 300;
+        text-transform: uppercase;
+        padding: 20px 60px;
+        border: 1px solid white;
+        cursor: pointer;
+      }
+      a:hover {
+        background-color: white;
+        color: $black;
+      }
+    }
+  }
+}
+
+.second,
+.third {
+  margin-bottom: 150px;
+  height: 70vh;
+  padding: 0px 100px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  .second__content,
+  .third__content {
+    background-color: #faf7f6;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .third__title {
+      text-transform: uppercase;
+      padding-bottom: 50px;
+      color: $black;
+      font-weight: 300;
+      font-size: 13px;
+    }
+    .second__text,
+    .third__text {
+      font-family: serif;
+      width: 70%;
+      font-size: 35px;
+      text-align: center;
+      color: $black;
+      margin-bottom: 50px;
+    }
+    .second__button {
+      a {
+        display: block;
+        color: $black;
+        font-size: 12px;
+        font-weight: 300;
+        text-transform: uppercase;
+        padding: 20px 60px;
+        border: 1px solid $black;
+        cursor: pointer;
+      }
+      a:hover {
+        background-color: $black;
+        color: white;
+      }
+    }
+    .third__button {
+      display: inline-block;
+      height: 55px;
+
+      box-sizing: border-box;
+      color: $black;
+      border: 1px solid $black;
+      font-size: 13px;
+      text-transform: uppercase;
+      a {
+        color: $black;
+        span {
+          position: relative;
+          padding: 0px 25px;
+        }
+      }
+    }
+  }
+}
+
+.fourth {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  img {
+    width: 100%;
+    height: 100%;
   }
 }
