--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -170,7 +170,7 @@ header {
 }
 
 .fourth {
-  margin-bottom: 40px;
+  margin-bottom: 100px;
   .fourth__title {
     display: flex;
     flex-direction: column;
@@ -225,6 +225,43 @@ header {
     &:hover {
       background-color: $black;
       color: white;
+    }
+  }
+}
+
+.fifth {
+  padding: 0px 100px;
+  margin-bottom: 100px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  .fifth__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: $black;
+    background-color: #f3ede8;
+    .fifth__content__date {
+      font-weight: 300;
+      margin-bottom: 50px;
+    }
+    .fifth__content__text {
+      width: 80%;
+      font-family: serif;
+      font-size: 40px;
+      text-align: center;
+      margin-bottom: 80px;
+    }
+    .fifth__content__button {
+      cursor: pointer;
+      font-weight: 300;
+      font-size: 12px;
+      text-transform: uppercase;
     }
   }
 }
