6번째 컨텐츠 완료

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -265,3 +265,50 @@ header {
     }
   }
 }
+
+.sixth {
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: $black;
+  .sixth__title {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 300;
+    margin-bottom: 40px;
+  }
+  .sixth__text {
+    font-family: serif;
+    font-size: 50px;
+    width: 50%;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .sixth__button {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid $black;
+    input {
+      width: 100%;
+      font-size: 40px;
+      font-family: serif;
+      color: gray;
+      border: none;
+      padding-bottom: 10px;
+      &:focus {
+        outline: none;
+      }
+    }
+    button {
+      background-color: white;
+      width: 40px;
+      height: 40px;
+      border: 1px solid $black;
+      text-align: center;
+      cursor: pointer;
+    }
+  }
+}
