--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -312,3 +312,18 @@ header {
     }
   }
 }
+
+.seventh {
+  padding: 0px 100px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  img {
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
