--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -345,3 +345,47 @@ header {
     }
   }
 }
+
+footer {
+  width: 100%;
+  height: 30vh;
+  background-color: #f3ede8;
+  .footer__contents {
+    padding: 0px 90px;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    align-items: center;
+    text-transform: uppercase;
+    .footer__content:not(:first-child) {
+      border-left: 1px solid black;
+    }
+    .footer__content {
+      width: 100%;
+      height: 60%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-weight: 300;
+      color: $black;
+      .footer__content__title {
+        margin-bottom: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0.5;
+        font-size: 13px;
+      }
+      span {
+        font-size: 13px;
+        cursor: pointer;
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
