--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -112,7 +112,7 @@ header {
   }
   .second__content,
   .third__content {
-    background-color: #faf7f6;
+    background-color: #f3ede8;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -150,20 +150,26 @@ header {
       }
     }
     .third__button {
-      display: inline-block;
-      height: 55px;
-
-      box-sizing: border-box;
-      color: $black;
+      padding-left: 30px;
+      width: 40vh;
+      height: 10vh;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       border: 1px solid $black;
-      font-size: 13px;
-      text-transform: uppercase;
+      font-weight: 300;
+      font-size: 14px;
       a {
         color: $black;
-        span {
-          position: relative;
-          padding: 0px 25px;
-        }
+        text-transform: uppercase;
+      }
+      button {
+        cursor: pointer;
+        width: 25%;
+        height: 100%;
+        border: none;
+        border-left: 1px solid $black;
+        background-color: #f3ede8;
       }
     }
   }
