--- a/10x19/src/scss/styles.scss
+++ b/10x19/src/scss/styles.scss
@@ -8,14 +8,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100vh;
+  background-color: $brown;
+  gap: 1px;
   display: grid;
   grid-template-columns: 1fr 1.7fr 1fr;
   grid-template-rows: 0.5fr 5fr 0.5fr;
-  grid-template-areas:
-    "logo emptybox menu"
-    "homeLeft main homeRight"
-    "emptybox news emptybox";
-  & > div {
+  & > * {
+    background-color: white;
     width: 100%;
     height: 100%;
     display: flex;
@@ -24,27 +23,35 @@ body {
   }
   .homeLeft,
   .homeRight {
+    background-color: $brown;
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(5, 1fr);
     place-items: center;
+    gap: 1px;
     & > div {
+      background-color: white;
+      color: $brown;
+      font-size: 20px;
       cursor: pointer;
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
+      transition: color 0.3s linear, background-color 0.3s linear;
     }
     & > div:hover {
       background-color: $brown;
       color: white;
     }
   }
+
   .menu {
     cursor: pointer;
+    transition: color 0.3s linear, background-color 0.3s linear;
     &:hover {
       background-color: $brown;
       color: white;
@@ -52,36 +59,45 @@ body {
   }
 }
 
-.logo,
-.left_emptybox {
-  border-right: 1px solid $brown;
+.logo {
+  img {
+    width: 75px;
+    height: 35px;
+  }
 }
 
-.left_emptybox,
-.right_emptybox,
-.news,
 .main {
-  border-top: 1px solid $brown;
+  background-image: url("http://10x19.co/staging/wp-content/uploads/2019/12/barry-5-768x768.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.three:hover {
+  background-image: url("http://10x19.co/staging/wp-content/uploads/2019/12/3-768x768.jpg");
 }
 
 .menu,
-.right_emptybox {
-  border-left: 1px solid $brown;
-}
-.homeLeft > div {
-  border-right: 1px solid $brown;
-  border-top: 1px solid $brown;
-}
-.homeRight > div {
-  border-left: 1px solid $brown;
-  border-top: 1px solid $brown;
-}
-
-.logo,
-.menu,
-.homeLeft,
-.homeRight,
 .news {
   color: $brown;
   font-size: 20px;
+}
+
+.news {
+  white-space: nowrap;
+  overflow: hidden;
+  span {
+    animation: moveText 10s linear infinite forwards;
+  }
+}
+
+@keyframes moveText {
+  0% {
+    transform: translateX(650px);
+  }
+  50% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(-650px);
+  }
 }
