--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,7 +6,7 @@
 }
 
 header {
-  position: fixed;
+  // position: fixed;
   // z-index: 1;
   width: 100%;
   height: 6vh;
@@ -104,6 +104,50 @@ header {
       em {
         @extend %em;
       }
+    }
+  }
+}
+
+.images {
+  margin: 1px 0px;
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+
+  img:nth-child(1),
+  img:nth-child(5),
+  img:nth-child(7),
+  img:nth-child(10) {
+    grid-column-start: span 2;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
+footer {
+  padding: 30vh;
+  width: 100%;
+  height: 100vh;
+  background-color: #535851;
+  display: grid;
+  grid-template-columns: 3fr;
+  grid-template-rows: 3fr, 1fr;
+  & div:first-child {
+    background-color: orange;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    div {
+      display: flex;
+      flex-direction: column;
     }
   }
 }
