--- a/tolv/src/scss/styles.scss
+++ b/tolv/src/scss/styles.scss
@@ -6,16 +6,12 @@
 }
 
 header {
-  // position: fixed;
-  // z-index: 1;
+  position: fixed;
+  z-index: 1;
   width: 100%;
   height: 6vh;
-  background-color: orange;
-  // display: grid;
-  // grid-template-columns: repeat(3, 1fr);
-  // grid-template-rows: 1fr;
-  // justify-items: center;
-  // align-items: center;
+  background-color: white;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,26 +20,27 @@ header {
     margin-left: 15vh;
     span {
       margin-right: 30px;
+      cursor: pointer;
     }
   }
 
   .header__logo {
     display: block;
     position: absolute;
-
-    left: 50%;
+    left: 48%;
     width: 65px;
     height: 30px;
+    cursor: pointer;
   }
   .header__icon {
     width: 35px;
     height: 30px;
     margin-right: 15vh;
+    cursor: pointer;
   }
 }
 
 .products {
-  margin-top: 6vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(5, 1fr);
@@ -127,27 +124,55 @@ header {
     height: 100%;
     cursor: pointer;
     &:hover {
-      opacity: 0.5;
+      filter: blur(30px);
+      transition: filter 0.2s linear;
     }
   }
 }
 
 footer {
-  padding: 30vh;
   width: 100%;
-  height: 100vh;
+  height: 94vh;
   background-color: #535851;
   display: grid;
   grid-template-columns: 3fr;
   grid-template-rows: 3fr, 1fr;
+  color: white;
+  & > div {
+    padding: 100px 0px 0px 200px;
+  }
   & div:first-child {
-    background-color: orange;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
+    line-height: 2em;
+    font-weight: 400;
+    span:not(.category) {
+      cursor: pointer;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
     div {
       display: flex;
       flex-direction: column;
+      .category {
+        color: #a8aba8;
+      }
+    }
+    div:last-child span:nth-child(3) {
+      margin-bottom: 30px;
+    }
+  }
+  & > div:last-child {
+    span {
+      font-size: 12px;
+    }
+    img {
+      position: absolute;
+      left: 48%;
+      width: 80px;
+      height: 80px;
     }
   }
 }
