--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -75,7 +75,7 @@ main {
   .posters {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 55vh;
+    grid-auto-rows: 70vh;
     // grid-template-rows: repeat(4, 1fr);
     .poster {
       cursor: pointer;
@@ -95,6 +95,7 @@ main {
       grid-template-columns: 1fr;
       grid-template-rows: 2fr 1fr;
       p {
+        display: none;
         padding: 30px;
         font-size: 20px;
         display: flex;
